# jarvis-monorepo

./: Makefile  pyproject.toml
.github/workflows/: build-and-publish.yml
applications/assistant/: Dockerfile  pyproject.toml
applications/assistant/src/assistant/: main.py
applications/assistant/src/assistant/api/: conversation.py
applications/assistant/src/assistant/core/: settings.py  state.py
applications/assistant/src/assistant/models/: conversation.py  llm.py
applications/assistant/src/assistant/services/: llm.py  tools.py
applications/backend/: Dockerfile  pyproject.toml
applications/backend/src/backend/: main.py  utils.py
applications/backend/src/backend/core/: ha_client.py  settings.py
applications/backend/src/backend/models/: generic.py  ha.py  plex.py
applications/frontend/: pyproject.toml
applications/frontend/src/frontend/: app.py
applications/satellite/: Dockerfile  pyproject.toml
applications/satellite/src/satellite/: main.py
applications/satellite/src/satellite/audio/recognition/: __init__.py
applications/satellite/src/satellite/audio/recognition/eagle/: recogniser.py
applications/satellite/src/satellite/audio/recognition/eagle/voices/: liam  madi
applications/satellite/src/satellite/audio/stt/: cheetah.py  openai.py
applications/satellite/src/satellite/audio/tts/: orca.py
applications/satellite/src/satellite/audio/vad/: __init__.py  cobra.py
applications/satellite/src/satellite/audio/wake/: porcupine.py
applications/satellite/src/satellite/core/: satellite_state.py  settings.py
notebooks/: add_user.ipynb
(+6 files in other folders)
